--- a/views/relatorioComissoes.hbs
+++ b/views/relatorioComissoes.hbs
@@ -90,7 +90,7 @@
                 <div class="col-lg-6 col-md-8">
                     <div class="form-container">
                         <h1 class="text-center title">Relatório de Comissões</h1>
-                        <form id="comissaoForm" onsubmit="return calcularComissao(event)" action="/calcularComissao" method="POST">
+                        <form id="comissaoForm" onsubmit="return calcularComissao(event)" action="auth/calcularComissao" method="POST">
                             <!-- Seleção do Operador -->
                             <div class="mb-3 row">
                                 <label for="operador" class="col-sm-4 col-form-label">Operador:</label>
@@ -157,13 +157,18 @@
 
     <script>
         // Função para calcular a comissão
-        function calcularComissao(event) {
+        async function calcularComissao(event) {
             event.preventDefault();
             const form = document.getElementById('comissaoForm');
             const formData = new FormData(form);
 
             // Implementar lógica de cálculo da comissão aqui ou enviar para o servidor
-            alert(`Calculando comissão para o operador ${formData.get('operador')} no mês ${formData.get('mes')}, ano ${formData.get('ano')}.`);
+
+            const response = await fetch(`/auth/calcularComissao/${formData.get('operador')}/${formData.get('mes')}/${formData.get('ano')}`);
+
+            const comissao = await response.json();
+            
+            alert(`Calculando comissão para o operador ${formData.get('operador')} no mês ${formData.get('mes')}, ano ${formData.get('ano')}.\nComissão calculada: R$ ${comissao}`);
         }
     </script>
 
