--- a/views/relatorioVendas.hbs
+++ b/views/relatorioVendas.hbs
@@ -51,18 +51,6 @@
                         <form id="comissaoForm" onsubmit="return calcularComissao(event)" action="/calcularComissao"
                             method="POST">
                             <div class="mb-3 row">
-                                <label for="operador" class="col-sm-4 col-form-label">Operador:</label>
-                                <div class="col-sm-8">
-                                    <select class="form-control" id="operador" name="operador" required>
-                                        <option value="">Selecione o operador</option>
-                                        <option value="operador1">Operador 1</option>
-                                        <option value="operador2">Operador 2</option>
-                                        <option value="operador3">Operador 3</option>
-                                        <option value="todos">Todos</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="mb-3 row">
                                 <label for="dataInicio" class="col-sm-4 col-form-label">Data de Início:</label>
                                 <div class="col-sm-8">
                                     <input type="date" class="form-control" id="dataInicio" name="dataInicio" required>
@@ -91,12 +79,15 @@
     </footer>
 
     <script>
-        function calcularComissao(event) {
+        document.getElementById('comissaoForm').addEventListener('submit', function (event) {
             event.preventDefault();
-            const form = document.getElementById('comissaoForm');
-            const formData = new FormData(form);
-            alert(`Calculando comissão para o operador ${formData.get('operador')} no mês ${formData.get('mes')}, ano ${formData.get('ano')}.`);
-        }
+            const dataInicio = document.getElementById('dataInicio').value;
+            const dataTermino = document.getElementById('dataTermino').value;
+            localStorage.setItem('dataInicio', dataInicio);
+            localStorage.setItem('dataTermino', dataTermino);
+
+            window.location.href = '/visualizarRelatorioVendas';
+        });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
