--- a/views/visualizarContratos.hbs
+++ b/views/visualizarContratos.hbs
@@ -8,6 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .container {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+        }
+    </style>
 </head>
 
 <body>
@@ -55,7 +68,7 @@
             const productCards = document.getElementById("productCards");
 
             try {
-                const response = await fetch('/auth/contratos'); // Altere esta URL para corresponder à sua API
+                const response = await fetch('/auth/contratos');
                 const contratos = await response.json();
                 if (!contratos.length) {
                     productCards.innerHTML = "<p class='text-center'>Você não registrou nenhum contrato.</p>";
