--- a/views/visualizarContratosGerente.hbs
+++ b/views/visualizarContratosGerente.hbs
@@ -7,6 +7,19 @@
     <title>Contratos da Empresa - Sagrado Neon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .container {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+        }
+    </style>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -42,11 +55,13 @@
         </div>
     </nav>
 
-    <div class="container content-spacing flex-grow-1" style="background-color: rgb(49, 04, 59);">
+    <!-- Container principal que vai preencher o restante da tela -->
+    <div class="container content-spacing" style="background-color: rgb(49, 04, 59);">
         <h1 class="text-center mb-4" style="color: var(--text-color);">Contratos</h1>
         <div id="productCards"></div>
     </div>
 
+    <!-- Rodapé -->
     <footer class="footer text-light text-center py-3">
         Todos os direitos reservados
     </footer>
@@ -56,7 +71,7 @@
             const productCards = document.getElementById("productCards");
 
             try {
-                const response = await fetch('/auth/contratosGeral'); // Altere esta URL para corresponder à sua API
+                const response = await fetch('/auth/contratosGeral');
                 const contratos = await response.json();
                 if (!contratos.length) {
                     productCards.innerHTML = "<p class='text-center'>Nenhum contrato cadastrado.</p>";
