Fix: Adicionar lógica de disponibilidade de produto também na página de operador

--- a/views/paginaContratoOperador.hbs
+++ b/views/paginaContratoOperador.hbs
@@ -258,7 +258,11 @@
 
         async function carregarListaDeProdutos(produtoSelecionado) {
             try {
-                const response = await fetch('/auth/produtosDisponiveis');
+                event.preventDefault();
+                const form = document.getElementById('formContrato');
+                const formData = new FormData(form);
+
+                const response = await fetch(`/auth/produtosDisponiveis/${formData.get('dataEvento')}`);
                 const produtos = await response.json();
                 console.log(produtos);
                 produtoSelecionado.innerHTML = '<option value="" disabled selected>Selecione um produto</option>';
